marky-markdown -> markdown-it

--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
 	"bugs": "https://github.com/derhuerst/transport.rest/issues",
 	"license": "ISC",
 	"devDependencies": {
-		"marky-markdown": "^12.0.0",
+		"markdown-it": "^10.0.0",
 		"rss": "^1.2.2"
 	},
 	"scripts": {
-		"build-readme": "marky-markdown readme.md >index.html",
+		"build-readme": "markdown-it readme.md >index.html",
 		"build-feed": "node build-feed.js >feed.xml",
 		"build": "npm run build-readme && npm run build-feed"
 	}
