--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"bugs": "https://github.com/derhuerst/transport.rest/issues",
 	"license": "ISC",
 	"devDependencies": {
+		"@derhuerst/technical-docs-cli": "^1.1.0",
 		"rehype-stringify": "^8.0.0",
 		"remark-parse": "^8.0.3",
 		"remark-rehype": "^8.0.0",
@@ -16,7 +17,8 @@
 		"unified": "^9.2.0"
 	},
 	"scripts": {
+		"build-md": "build-technical-doc <readme.md >index.html",
 		"build-feed": "node build-feed.js >feed.xml",
-		"build": "npm run build-feed"
+		"build": "npm run build-md && npm run build-feed"
 	}
 }
