--- a/lib/v0.hamburg-gtfs-rt.transport.rest-monitor.service
+++ b/lib/v0.hamburg-gtfs-rt.transport.rest-monitor.service
@@ -1,21 +1,22 @@
 [Unit]
 Description=monitor HVV endpoint
-Requires=v0.hamburg-gtfs-rt.transport.rest-match.socket
-After=redis.service v0.hamburg-gtfs-rt.transport.rest-match.socket
+After=redis.service nats-streaming-server.service
 Wants=v0.hamburg-gtfs-rt.transport.rest-match.service v0.hamburg-gtfs-rt.transport.rest-serve.service
 
 [Service]
 WorkingDirectory=/var/www/v0.hamburg-gtfs-rt.transport.rest
-ExecStart=/usr/bin/node monitor.js
+ExecStart=/var/www/v0.hamburg-gtfs-rt.transport.rest/node_modules/hafas-gtfs-rt-feed/monitor.js lib/hafas.js
 Environment=NODE_ENV=production
 Environment=BBOX="{\"north\": 53.6744, \"west\": 9.7559, \"south\": 53.3660, \"east\": 10.2909}"
-Environment=LOCAL_ADDRESS=2a01:4f8:c2c:82fa::7,2a01:4f8:c2c:82fa::8,2a01:4f8:c2c:82fa::9,2a01:4f8:c2c:82fa::a,2a01:4f8:c2c:82fa::b,2a01:4f8:c2c:82fa::c
+Environment=LOCAL_ADDRESS=2a01:4f8:c2c:82fa::1,2a01:4f8:c2c:82fa::10,2a01:4f8:c2c:82fa::11,2a01:4f8:c2c:82fa::12,2a01:4f8:c2c:82fa::13,2a01:4f8:c2c:82fa::14,2a01:4f8:c2c:82fa::15,2a01:4f8:c2c:82fa::16,2a01:4f8:c2c:82fa::17,2a01:4f8:c2c:82fa::18,2a01:4f8:c2c:82fa::19,2a01:4f8:c2c:82fa::1a,2a01:4f8:c2c:82fa::7,2a01:4f8:c2c:82fa::8,2a01:4f8:c2c:82fa::9,2a01:4f8:c2c:82fa::a,2a01:4f8:c2c:82fa::b,2a01:4f8:c2c:82fa::c,2a01:4f8:c2c:82fa::d,2a01:4f8:c2c:82fa::e,2a01:4f8:c2c:82fa::f
 
-Sockets=v0.hamburg-gtfs-rt.transport.rest-match.socket
 StandardInput=null
-StandardOutput=fd:v0.hamburg-gtfs-rt.transport.rest-match.socket
+StandardOutput=journal
 StandardError=journal
 
 Restart=always
 RestartSec=1s
 TimeoutStartSec=infinity
+
+[Install]
+WantedBy=multi-user.target
