--- a/lib/v0.hamburg-gtfs-rt.transport.rest-serve.service
+++ b/lib/v0.hamburg-gtfs-rt.transport.rest-serve.service
@@ -1,19 +1,20 @@
 [Unit]
 Description=serve HVV data as GTFS-RT
-Requires=v0.hamburg-gtfs-rt.transport.rest-serve.socket
-After=v0.hamburg-gtfs-rt.transport.rest-serve.socket
+After=nats-streaming-server.service
 
 [Service]
 WorkingDirectory=/var/www/v0.hamburg-gtfs-rt.transport.rest
-ExecStart=/usr/bin/node serve.js
+ExecStart=/var/www/v0.hamburg-gtfs-rt.transport.rest/node_modules/hafas-gtfs-rt-feed/serve.js
 Environment=NODE_ENV=production
 Environment=PORT=3001
 
-Sockets=v0.hamburg-gtfs-rt.transport.rest-serve.socket
-StandardInput=fd:v0.hamburg-gtfs-rt.transport.rest-serve.socket
+StandardInput=null
 StandardOutput=journal
 StandardError=journal
 
 Restart=always
 RestartSec=1s
 TimeoutStartSec=infinity
+
+[Install]
+WantedBy=multi-user.target
