--- a/lib/Caddyfile
+++ b/lib/Caddyfile
@@ -1,143 +1,157 @@
 v5.vbb.transport.rest {
 	encode zstd gzip
-	proxy / {
+	route / {
 		rate_limit {remote.ip} 100r/m
-		upstream http://localhost:3009
-
-		policy round_robin
-		fail_timeout 1m
-		max_fails 2
-		health_check /health
-		health_check_interval 5m
-		health_check_timeout 10s
-		transparent
-		websocket
 	}
-	log /var/log/caddy/v5.vbb.transport.rest.log {
-		rotate_age 365
-		rotate_keep 100
-		ipmask 255.255.0.0 ffff:ffff:ffff:ff00::
+	reverse_proxy / {
+		to http://localhost:3009
+
+		lb_policy round_robin
+		lb_try_duration 30s
+		fail_duration 1m
+		max_fails 5
+		health_path /health
+		health_interval 5m
+		health_timeout 10s
+	}
+	log {
+		output file /var/log/caddy/v5.vbb.transport.rest.log {
+			rotate_keep 10000h
+			ipmask 255.255.0.0 ffff:ffff:ffff:ff00::
+		}
 	}
 }
 a.v5.vbb.transport.rest {
-	proxy / http://localhost:3009 {
+	route / {
 		rate_limit {remote.ip} 100r/m
-		transparent
-		websocket
 	}
-	log /var/log/caddy/v5.vbb.transport.rest.log {
-		rotate_age 365
-		rotate_keep 100
-		ipmask 255.255.0.0 ffff:ffff:ffff:ff00::
+	reverse_proxy / http://localhost:3009 {
+	}
+	log {
+		output file /var/log/caddy/v5.vbb.transport.rest.log {
+			rotate_keep 10000h
+			ipmask 255.255.0.0 ffff:ffff:ffff:ff00::
+		}
 	}
 }
 
 v5.db.transport.rest {
 	encode zstd gzip
-	proxy / {
+	route / {
 		rate_limit {remote.ip} 100r/m
-		upstream http://localhost:3008
-
-		policy round_robin
-		fail_timeout 1m
-		max_fails 2
-		health_check /health
-		health_check_interval 5m
-		health_check_timeout 10s
-		transparent
-		websocket
 	}
-	log /var/log/caddy/v5.db.transport.rest.log {
-		rotate_age 365
-		rotate_keep 100
-		ipmask 255.255.0.0 ffff:ffff:ffff:ff00::
+	reverse_proxy / {
+		to http://localhost:3008
+
+		lb_policy round_robin
+		lb_try_duration 10s
+		fail_duration 1m
+		max_fails 5
+		health_path /health
+		health_interval 5m
+		health_timeout 10s
+	}
+	log {
+		output file /var/log/caddy/v5.db.transport.rest.log {
+			rotate_keep 10000h
+			ipmask 255.255.0.0 ffff:ffff:ffff:ff00::
+		}
 	}
 }
 a.v5.db.transport.rest {
-	proxy / http://localhost:3008 {
+	route / {
 		rate_limit {remote.ip} 100r/m
-		transparent
-		websocket
 	}
-	log /var/log/caddy/v5.db.transport.rest.log {
-		rotate_age 365
-		rotate_keep 100
-		ipmask 255.255.0.0 ffff:ffff:ffff:ff00::
+	reverse_proxy / http://localhost:3008 {
+	}
+	log {
+		output file /var/log/caddy/v5.db.transport.rest.log {
+			rotate_keep 10000h
+			ipmask 255.255.0.0 ffff:ffff:ffff:ff00::
+		}
 	}
 }
 
 v5.bvg.transport.rest {
 	encode zstd gzip
-	proxy / {
+	route / {
 		rate_limit {remote.ip} 100r/m
-		upstream http://localhost:3007
-
-		policy round_robin
-		fail_timeout 1m
-		max_fails 2
-		health_check /health
-		health_check_interval 5m
-		health_check_timeout 10s
-		transparent
-		websocket
 	}
-	log /var/log/caddy/v5.bvg.transport.rest.log {
-		rotate_age 365
-		rotate_keep 100
-		ipmask 255.255.0.0 ffff:ffff:ffff:ff00::
+	reverse_proxy / {
+		to http://localhost:3007
+
+		lb_policy round_robin
+		lb_try_duration 10s
+		fail_duration 1m
+		max_fails 5
+		health_path /health
+		health_interval 5m
+		health_timeout 10s
+	}
+	log {
+		output file /var/log/caddy/v5.bvg.transport.rest.log {
+			rotate_keep 10000h
+			ipmask 255.255.0.0 ffff:ffff:ffff:ff00::
+		}
 	}
 }
 a.v5.bvg.transport.rest {
-	proxy / http://localhost:3007 {
+	route / {
 		rate_limit {remote.ip} 100r/m
-		transparent
-		websocket
 	}
-	log /var/log/caddy/v5.bvg.transport.rest.log {
-		rotate_age 365
-		rotate_keep 100
-		ipmask 255.255.0.0 ffff:ffff:ffff:ff00::
+	reverse_proxy / http://localhost:3007 {
+	}
+	log {
+		output file /var/log/caddy/v5.bvg.transport.rest.log {
+			rotate_keep 10000h
+			ipmask 255.255.0.0 ffff:ffff:ffff:ff00::
+		}
 	}
 }
 
 v5.hvv.transport.rest {
 	encode zstd gzip
-	proxy / {
+	route / {
 		rate_limit {remote.ip} 100r/m
-		upstream http://localhost:3006
-
-		policy round_robin
-		fail_timeout 1m
-		max_fails 2
-		health_check /health
-		health_check_interval 5m
-		health_check_timeout 10s
-		transparent
-		websocket
 	}
-	log /var/log/caddy/v5.hvv.transport.rest.log {
-		rotate_age 365
-		rotate_keep 100
-		ipmask 255.255.0.0 ffff:ffff:ffff:ff00::
+	reverse_proxy / {
+		to http://localhost:3006
+
+		lb_policy round_robin
+		lb_try_duration 10s
+		fail_duration 1m
+		max_fails 5
+		health_path /health
+		health_interval 5m
+		health_timeout 10s
+	}
+	log {
+		output file /var/log/caddy/v5.hvv.transport.rest.log {
+			rotate_keep 10000h
+			ipmask 255.255.0.0 ffff:ffff:ffff:ff00::
+		}
 	}
 }
 a.v5.hvv.transport.rest {
-	proxy / http://localhost:3006 {
+	route / {
 		rate_limit {remote.ip} 100r/m
-		transparent
-		websocket
 	}
-	log /var/log/caddy/v5.hvv.transport.rest.log {
-		rotate_age 365
-		rotate_keep 100
-		ipmask 255.255.0.0 ffff:ffff:ffff:ff00::
+	reverse_proxy / http://localhost:3006 {
+	}
+	log {
+		output file /var/log/caddy/v5.hvv.transport.rest.log {
+			rotate_keep 10000h
+			ipmask 255.255.0.0 ffff:ffff:ffff:ff00::
+		}
 	}
 }
 
 v0.berlin-gtfs-rt.transport.rest {
 	encode zstd gzip
-	route /feed {
+	route / {
 		rate_limit {remote.ip} 300r/m
+	}
+	route /feed {
 		uri strip_prefix /feed
 		reverse_proxy {
 			to localhost:3000
@@ -149,8 +163,10 @@ v0.berlin-gtfs-rt.transport.rest {
 
 v0.hamburg-gtfs-rt.transport.rest {
 	encode zstd gzip
-	route /feed {
+	route / {
 		rate_limit {remote.ip} 300r/m
+	}
+	route /feed {
 		uri strip_prefix /feed
 		reverse_proxy {
 			to localhost:3001
