v0.{berlin,hamburg}-gtfs-rt…: enable metrics

--- a/lib/v0.berlin-gtfs-rt.transport.rest-match.service
+++ b/lib/v0.berlin-gtfs-rt.transport.rest-match.service
@@ -10,6 +10,7 @@ Environment=PGUSER=postgres
 Environment=PGPASSWORD=password
 Environment=PGDATABASE=berlin
 Environment=REDIS_URL=redis:///4
+Environment=METRICS_SERVER_PORT=19324
 
 StandardInput=null
 StandardOutput=journal
