--- a/lib/v0.berlin-gtfs-rt.transport.rest-monitor.service
+++ b/lib/v0.berlin-gtfs-rt.transport.rest-monitor.service
@@ -10,6 +10,7 @@ Environment=NODE_ENV=production
 Environment=BBOX="{\"north\": 52.602, \"west\": 13.175, \"south\": 52.375, \"east\": 13.652}"
 Environment=LOCAL_ADDRESS=2a01:4f8:c0c:d58c::3,2a01:4f8:c0c:d58c::4,2a01:4f8:c0c:d58c::5,2a01:4f8:c0c:d58c::6,2a01:4f8:c0c:d58c::8,2a01:4f8:c0c:d58c::9,2a01:4f8:c0c:d58c::a,2a01:4f8:c0c:d58c::b,2a01:4f8:c0c:d58c::c,2a01:4f8:c0c:d58c::d,2a01:4f8:c0c:d58c::e,2a01:4f8:c0c:d58c::f
 Environment=FETCH_TRIPS_INTERVAL=120000
+Environment=METRICS_SERVER_PORT=19323
 
 StandardInput=null
 StandardOutput=journal
