--- a/lib/v0.berlin-gtfs-rt.transport.rest-serve.service
+++ b/lib/v0.berlin-gtfs-rt.transport.rest-serve.service
@@ -7,6 +7,7 @@ WorkingDirectory=/var/www/v0.berlin-gtfs-rt.transport.rest
 ExecStart=/var/www/v0.berlin-gtfs-rt.transport.rest/node_modules/hafas-gtfs-rt-feed/serve.js
 Environment=NODE_ENV=production
 Environment=PORT=3000
+Environment=METRICS_SERVER_PORT=19325
 
 StandardInput=null
 StandardOutput=journal
