--- a/lib/v0.hamburg-gtfs-rt.transport.rest-match.service
+++ b/lib/v0.hamburg-gtfs-rt.transport.rest-match.service
@@ -10,6 +10,7 @@ Environment=PGUSER=postgres
 Environment=PGPASSWORD=password
 Environment=PGDATABASE=hamburg
 Environment=REDIS_URL=redis:///1
+Environment=METRICS_SERVER_PORT=19327
 
 StandardInput=null
 StandardOutput=journal
