--- a/lib/v0.berlin-gtfs-rt.transport.rest-monitor.service
+++ b/lib/v0.berlin-gtfs-rt.transport.rest-monitor.service
@@ -7,6 +7,7 @@ Wants=v0.berlin-gtfs-rt.transport.rest-match.service v0.berlin-gtfs-rt.transport
 WorkingDirectory=/var/www/v0.berlin-gtfs-rt.transport.rest
 ExecStart=/var/www/v0.berlin-gtfs-rt.transport.rest/node_modules/hafas-gtfs-rt-feed/monitor.js lib/hafas.js
 Environment=NODE_ENV=production
+Environment=FEED_ID=berlin
 Environment=BBOX="{\"north\": 52.602, \"west\": 13.175, \"south\": 52.375, \"east\": 13.652}"
 Environment=LOCAL_ADDRESS=2a01:4f8:c0c:d58c::3,2a01:4f8:c0c:d58c::4,2a01:4f8:c0c:d58c::5,2a01:4f8:c0c:d58c::6,2a01:4f8:c0c:d58c::8,2a01:4f8:c0c:d58c::9,2a01:4f8:c0c:d58c::a,2a01:4f8:c0c:d58c::b,2a01:4f8:c0c:d58c::c,2a01:4f8:c0c:d58c::d,2a01:4f8:c0c:d58c::e,2a01:4f8:c0c:d58c::f
 Environment=FETCH_TRIPS_INTERVAL=120000
