--- a/lib/v0.berlin-gtfs-rt.transport.rest-serve.service
+++ b/lib/v0.berlin-gtfs-rt.transport.rest-serve.service
@@ -6,6 +6,7 @@ After=nats-streaming-server.service
 WorkingDirectory=/var/www/v0.berlin-gtfs-rt.transport.rest
 ExecStart=/var/www/v0.berlin-gtfs-rt.transport.rest/node_modules/hafas-gtfs-rt-feed/serve.js
 Environment=NODE_ENV=production
+Environment=FEED_ID=berlin
 Environment=PORT=3000
 Environment=METRICS_SERVER_PORT=19325
 
