--- a/inventory.yaml
+++ b/inventory.yaml
@@ -2,6 +2,8 @@ all:
   hosts:
     guelder:
       ansible_user: root
+    ipe:
+      ansible_user: root
   children:
     hafas-rest-api:
       children:
@@ -14,3 +16,8 @@ all:
         vbb-rest-5:
           hosts:
             guelder:
+    hafas-gtfs-rt-server:
+      children:
+        berlin-gtfs-rt-server-0:
+          hosts:
+            ipe:
