--- a/lib/v0.berlin-gtfs-rt.transport.rest-serve.service
+++ b/lib/v0.berlin-gtfs-rt.transport.rest-serve.service
@@ -3,8 +3,8 @@ Description=serve VBB data as GTFS-RT
 After=nats-streaming-server.service
 
 [Service]
-WorkingDirectory=/var/www/v0.berlin-gtfs-rt.transport.rest
-ExecStart=/var/www/v0.berlin-gtfs-rt.transport.rest/node_modules/hafas-gtfs-rt-feed/serve.js
+WorkingDirectory=/srv/v0.berlin-gtfs-rt.transport.rest
+ExecStart=/srv/v0.berlin-gtfs-rt.transport.rest/node_modules/hafas-gtfs-rt-feed/serve.js
 Environment=NODE_ENV=production
 Environment=FEED_ID=berlin
 Environment=PORT=3000
