--- a/inventory.yaml
+++ b/inventory.yaml
@@ -16,6 +16,9 @@ all:
         vbb-rest-5:
           hosts:
             thuya:
+        db-rest-6:
+          hosts:
+            thuya:
         vbb-rest-6:
           hosts:
             thuya:
