--- a/lib/v0.berlin-gtfs-rt.transport.rest-monitor.service
+++ b/lib/v0.berlin-gtfs-rt.transport.rest-monitor.service
@@ -9,7 +9,8 @@ ExecStart=/srv/v0.berlin-gtfs-rt.transport.rest/node_modules/hafas-gtfs-rt-feed/
 Environment=NODE_ENV=production
 Environment=FEED_ID=berlin
 Environment=BBOX="{\"north\": 53.129, \"west\": 13.175, \"south\": 52.375, \"east\": 14.458}"
-Environment=LOCAL_ADDRESS=2a01:4f8:c0c:d58c::3,2a01:4f8:c0c:d58c::4,2a01:4f8:c0c:d58c::5,2a01:4f8:c0c:d58c::6,2a01:4f8:c0c:d58c::8,2a01:4f8:c0c:d58c::9,2a01:4f8:c0c:d58c::a,2a01:4f8:c0c:d58c::b,2a01:4f8:c0c:d58c::c,2a01:4f8:c0c:d58c::d,2a01:4f8:c0c:d58c::e,2a01:4f8:c0c:d58c::f
+# server has 2a01:4f8:c010:3102::/64
+Environment=RANDOM_LOCAL_ADDRESSES_PREFIX="2a01:4f8:c010:3102:1016:3b71:"
 Environment=FETCH_TRIPS_INTERVAL=60000
 Environment=METRICS_SERVER_PORT=19323
 
