--- a/lib/v0.berlin-gtfs-rt.transport.rest-monitor.service
+++ b/lib/v0.berlin-gtfs-rt.transport.rest-monitor.service
@@ -5,7 +5,7 @@ Wants=v0.berlin-gtfs-rt.transport.rest-match.service v0.berlin-gtfs-rt.transport
 
 [Service]
 WorkingDirectory=/srv/v0.berlin-gtfs-rt.transport.rest
-ExecStart=/srv/v0.berlin-gtfs-rt.transport.rest/node_modules/hafas-gtfs-rt-feed/monitor.js lib/hafas.js
+ExecStart=/srv/v0.berlin-gtfs-rt.transport.rest/node_modules/hafas-gtfs-rt-feed/monitor.js --trips-fetch-mode on-demand lib/hafas.js
 Environment=NODE_ENV=production
 Environment=FEED_ID=berlin
 Environment=BBOX="{\"north\": 53.129, \"west\": 13.175, \"south\": 52.375, \"east\": 14.458}"
