v6.{bvg,db,vbb}.transport.rest: build with $HOSTNAME
This is necessary due to these changes:
- https://github.com/derhuerst/bvg-rest/commit/90438990b8d46c13ff962e431a6223bd99623e8b
- https://github.com/derhuerst/db-rest/commit/63964f91f36aa4b229f38c57bc8ee15c0217c210
- https://github.com/derhuerst/vbb-rest/commit/5b1ade80ed3a8e0a3afa261c1ad146e4497ea007

--- a/ansible-playbook.yaml
+++ b/ansible-playbook.yaml
@@ -338,6 +338,8 @@
       shell: npm run build
       args:
         chdir: /srv/a.v6.bvg.transport.rest
+      environment:
+        HOSTNAME: a.v6.bvg.transport.rest
     - name: create systemd service
       ansible.builtin.copy:
         src: lib/a.v6.bvg.transport.rest.service
@@ -372,6 +374,8 @@
       shell: npm run build
       args:
         chdir: /srv/a.v6.db.transport.rest
+      environment:
+        HOSTNAME: a.v6.db.transport.rest
     - name: create systemd service
       ansible.builtin.copy:
         src: lib/a.v6.db.transport.rest.service
@@ -406,6 +410,8 @@
       shell: npm run build
       args:
         chdir: /srv/a.v6.vbb.transport.rest
+      environment:
+        HOSTNAME: a.v6.vbb.transport.rest
     - name: create systemd service
       ansible.builtin.copy:
         src: lib/a.v6.vbb.transport.rest.service
