--- a/lib/a.v5.bvg.transport.rest.service
+++ b/lib/a.v5.bvg.transport.rest.service
@@ -16,6 +16,7 @@ Environment=TIMEZONE=Europe/Berlin
 Environment=LOCALE=de-DE
 # they seem to have disabled IPv6
 # Environment=LOCAL_ADDRESS=2a01:4f8:c0c:d58c::1,2a01:4f8:c0c:d58c::2
+Environment=RANDOM_LOCAL_ADDRESSES_PREFIX="2a01:4f8:c012:91b7:4c86::"
 
 [Install]
 WantedBy=multi-user.target
