--- a/lib/a.v6.db.transport.rest.service
+++ b/lib/a.v6.db.transport.rest.service
@@ -14,7 +14,8 @@ Environment=PORT=3011
 Environment=REDIS_URL=redis:///7
 Environment=TIMEZONE=Europe/Berlin
 Environment=LOCALE=de-DE
-Environment=LOCAL_ADDRESS=2a01:4f8:c0c:d58c::1,2a01:4f8:c0c:d58c::2
+# they seem to have disabled IPv6
+#Environment=LOCAL_ADDRESS=2a01:4f8:c0c:d58c::1,2a01:4f8:c0c:d58c::2
 
 [Install]
 WantedBy=multi-user.target
