--- a/lib/a.v6.db.transport.rest.service
+++ b/lib/a.v6.db.transport.rest.service
@@ -16,6 +16,7 @@ Environment=TIMEZONE=Europe/Berlin
 Environment=LOCALE=de-DE
 # they seem to have disabled IPv6
 #Environment=LOCAL_ADDRESS=2a01:4f8:c0c:d58c::1,2a01:4f8:c0c:d58c::2
+Environment=HAFAS_REQ_RES_LOG_FILE=/var/log/recorded-hafas-data/a.v6.db.transport.rest.ndjson
 
 [Install]
 WantedBy=multi-user.target
