--- a/lib/syslog-mute-local7-facility.conf
+++ b/lib/syslog-mute-local7-facility.conf
@@ -1,2 +1,2 @@
-# We mute the `local7` facility by redirecting it to /dev/null.
-local7.*                        /dev/null
+# We mute the `local7` facility
+local7.*    stop
